@startuml

title __ESTAT's Class Diagram__\n

  namespace ub.edu.model {
    namespace Estat {
      class ub.edu.model.Estat.Acabat {
          + Acabat()
      }
    }
  }
  

  namespace ub.edu.model {
    namespace Estat {
      class ub.edu.model.Estat.EnProces {
          + EnProces()
      }
    }
  }
  

  namespace ub.edu.model {
    namespace Estat {
      class ub.edu.model.Estat.Estat {
          + Estat()
          + cambiarEstat()
          + getEstat()
      }
    }
  }
  

  namespace ub.edu.model {
    namespace Estat {
      class ub.edu.model.Estat.NoComencat {
          + NoComencat()
      }
    }
  }
  

  ub.edu.model.Estat.Acabat -up-|> ub.edu.model.Estat.Estat
  ub.edu.model.Estat.EnProces -up-|> ub.edu.model.Estat.Estat
  ub.edu.model.Estat.NoComencat -up-|> ub.edu.model.Estat.Estat


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
